--- a/springmvc-mini/src/main/resources/application.properties
+++ b/springmvc-mini/src/main/resources/application.properties
@@ -3,3 +3,16 @@ scanPackage=com.huangliang.mvc
 templateRoot=templates
 
 suffix=.html
+
+#切面表达式#
+pointCut=public .* com.huangliang.mvc.service..*Service..*(.*)
+#切面类#
+aspectClass=com.gupaoedu.vip.spring.demo.aspect.LogAspect
+#切面前置通知#
+aspectBefore=before
+#切面后置通知#
+aspectAfter=after
+#切面异常通知#
+aspectAfterThrow=afterThrowing
+#切面异常类型#
+aspectAfterThrowingName=java.lang.Exception
