--- a/springmvc-mini/src/main/resources/application.properties
+++ b/springmvc-mini/src/main/resources/application.properties
@@ -7,7 +7,7 @@ suffix=.html
 #切面表达式#
 pointCut=public .* com.huangliang.mvc.service..*Service..*(.*)
 #切面类#
-aspectClass=com.gupaoedu.vip.spring.demo.aspect.LogAspect
+aspectClass=com.huangliang.mvc.aspect.LogAspect
 #切面前置通知#
 aspectBefore=before
 #切面后置通知#
